@@ -28,8 +28,10 @@ apport (0.120) UNRELEASED; urgency=low
     the hook.
   * apport/report.py: Also print exceptions from binary and source package
     hooks, not just from common ones.
+  * apport/report.py, add_hooks_info(): Do not print an error if a source
+    package hook does not exist.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 26 Nov 2008 17:45:05 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 26 Nov 2008 17:47:42 +0100
 
 apport (0.119) intrepid; urgency=low
 
